get myInfo