@@ -12,13 +12,18 @@ import com.chinhdo.identity_service.repository.UserRepository;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.security.access.prepost.PostAuthorize;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor //tao constructor cho all bien define la final, ko can di bang autowired
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true) //mac dinh la private final
@@ -48,15 +53,27 @@ public class UserService {
         return userMapper.toUserResponse(savedUser);
     }
 
+    @PreAuthorize("hasRole('ADMIN')")//ADMIN thi moi dc su dung ham nay
     public List<UserResponse> getUsers(){
+        log.info("In method getUsers");
         return userRepository.findAll()
                 .stream()
                 .map(userMapper::toUserResponse) // Ánh xạ User -> UserResponse
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @PostAuthorize("returnObject.username == authentication.name")
     public UserResponse getUser(String id){
+        log.info("In method getUser by id");
         return userMapper.toUserResponse(userRepository.findById(id).orElseThrow(() -> new RuntimeException("User not found! =))")));
+    }
+
+    public UserResponse getMyInfo(){
+        var context = SecurityContextHolder.getContext();//lay thong tin user hien tai
+        String name = context.getAuthentication().getName();
+
+        User user = userRepository.findByUsername(name).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+        return userMapper.toUserResponse(user);
     }
 
     public UserResponse updateUser(String userId,UserUpdateRequest request){
